Fixed skin installation selection layout bug

--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -1312,6 +1312,14 @@ div.level3 nav .nav > li + li {
 	}
 	.legend {
 		margin: 0 1ex;
+		width: 240px;
+		height: 50px;
+		overflow: hidden;
+		label {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
 	}
 }
 .coll_settings_skinshot {
